[package]
name = "r3ma_backup"
version = "0.1.0"
authors = ["Lars Pieschel"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple utility library for decrypting and encrypting Threema key backups."
repository = "https://github.com/sumaron/r3ma_backup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.2.1"
salsa20 = "0.4.1"
pbkdf2 = "0.3.0"
hmac = "0.7.1"
sha2 = "0.8.2"
hex = "0.4.2"
rand = "0.7.3"
